animation fix and added santos-travel project

--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
 				Khant<span class="text-fav">Phone</span>
 			</a>
 			<button class="navbar-toggler text-dark" data-toggle="collapse" data-target="#navbar">
-				<i class="fas fa-bars ml-auto"></i>
-							
+				<i class="fas fa-bars "></i>							
 			</button>
 			<div class="collapse navbar-collapse font-18" id="navbar">
 				<ul class="navbar-nav ml-auto">
@@ -62,25 +61,26 @@
 		      <img src="images/start-up.png" width="40">
 		      </button>
 		  </div>
-	</nav>	
-	<!-- navigation end -->		
+	</nav>
+	<!-- navigation end -->
+
 	<!-- indrouction section start -->
 	<section id="info" class="">
 		<div class="container">
 			<div class="author-info">
 			<div class="row">				
 				<div class="col-md-6 author-info-text px-4">
-					<p class="font-sar font-30 font-weight-bold mt-4 mb-0 upper-text" style="letter-spacing: 2px;" data-aos = "fade-in">  Hi , I am 
+					<p class="font-sar font-30 font-weight-bold mt-4 mb-0 upper-text" style="letter-spacing: 2px;" >  Hi , I am 
 					</p>
 					<p class="font-sar font-30 font-weight-bold mb-0">	
-						<span class="typed1 text-fav font-40 lower-text" data-aos = "fade-in"></span>
+						<span class="typed1 text-fav font-40 lower-text" ></span>
 					</p>
-					<p class="font-bar font-24 mt-3 extra-text text-muted" data-aos = "fade-out">
+					<p class="font-bar font-24 mt-3 extra-text text-muted" >
 						A 19 years old freelance developer  who is  willing to learn new things and 
 						enjoyed about Coding .
 					</p>
 					<a href="#completed-prj">
-						<button class="btn px-4 py-2 font-bu text-white bg-fav mt-3 " data-aos="fade-in">View My Works
+						<button class="btn px-4 py-2 font-bu text-white bg-fav mt-3 " data-aos="fade-up">View My Works
 						</button>
 					</a>					
 				</div>
@@ -95,15 +95,15 @@
 	<section id="intro" class="py-5 px-4  intro mt-4">
 		<div class="container">
 			<h2 class="font-bar font-weight-bold text-uppercase text-center py-2 text-dark"
-			 data-aos = "fade-in">Introduction</h2>	
-			<div id="custom-border-1" data-aos = "fade-out">
-				<div id="cutom-border-2" data-aos = "fade-out"></div>
+			>Introduction</h2>	
+			<div id="custom-border-1">
+				<div id="cutom-border-2"></div>
 			</div>
 			<div class="row">
-				<div class="col-md-6 mt-5" data-aos= "fade-up">
+				<div class="col-md-6 mt-5">
 					<img src="images/profile2.jpeg" alt="My Profile" class="img-fluid">
 				</div>
-				<div class="col-md-6 d-flex" data-aos = "fade-up">
+				<div class="col-md-6 d-flex">
 					<div class="about-me">
 						<h2 class="font-sar">About Me</h2>
 						<p class="font-bar font-18 mt-4">Hey! I am Khant Phone who is learnig web development and enjoy about coding.</p>
@@ -122,13 +122,14 @@
 		</div>
 	</section>
 	<!-- indrouction section end -->
+
 	<!-- educaton section start -->
 	<section id="education" class=" mt-4 py-4 px-4 ">
             <div class="container">
 	            <h2 class="font-bar font-weight-bold text-uppercase text-center py-2 text-dark"
-				 data-aos = "fade-in">Education</h2>	
-				<div id="custom-border-1" data-aos = "fade-out">
-					<div id="cutom-border-2" data-aos = "fade-out"></div>
+				 >Education</h2>	
+				<div id="custom-border-1">
+					<div id="cutom-border-2"></div>
 				</div>
                 <div class="education_sections mt-5 mb-4 ">
                     <!-- education content 1 -->
@@ -185,11 +186,12 @@
             </div>
     </section>
 	<!-- educaton section end -->
+
 	<!-- counter section start -->
 	<section id="counter" class="py-5 px-4 bg- mt-4 bg-fav">
 		<div class="container">
 			<div class="row ">				
-				<div class="col-md-6 col-lg-3 border-counter  d-flex justify-content-center counter-border-right" data-aos= "fade-top">
+				<div class="col-md-6 col-lg-3 border-counter  d-flex justify-content-center counter-border-right">
 				  	<div class="row">
 				  		<div class="col">
 				  			<img src="images/customer-review.png" alt="" width="70" >
@@ -201,7 +203,7 @@
 				  		</div>
 				  	</div>
 				</div>
-				<div class="col-md-6 col-lg-3 border-counter d-flex justify-content-center counter-border-right" data-aos= "fade-top">
+				<div class="col-md-6 col-lg-3 border-counter d-flex justify-content-center counter-border-right">
 				  	<div class="row">
 				  		<div class="col">
 				  			<img src="images/project-management.png" alt="" width="70">
@@ -213,7 +215,7 @@
 				  		</div>
 				  	</div>
 				</div>
-				<div class="col-md-6 col-lg-3 border-counter d-flex justify-content-center counter-border-right" data-aos= "fade-top">
+				<div class="col-md-6 col-lg-3 border-counter d-flex justify-content-center counter-border-right">
 				  	<div class="row">
 				  		<div class="col">
 				  			<img src="images/settings.png" alt="" width="70">
@@ -225,7 +227,7 @@
 				  		</div>
 				  	</div>
 				</div>
-				<div class="col-md-6 col-lg-3 border-counter  d-flex justify-content-center" data-aos= "fade-top">
+				<div class="col-md-6 col-lg-3 border-counter  d-flex justify-content-center">
 				  	<div class="row">
 				  		<div class="col">
 				  			<img src="images/handshake.png" alt="" width="70">
@@ -241,17 +243,18 @@
 		</div>
 	</section>
 	<!-- counter section end -->
+
 	<!-- completedProject section start -->
 	<section id="completed-prj" class="py-4 px-4  bg-light">
 	 	<div class="container">
-			<h2 class="font-sar text-center py-2 mt-4" data-aos = "fade-in">Completed <span class="text-fav">
+			<h2 class="font-sar text-center py-2 mt-4">Completed <span class="text-fav">
 				Projects
 			</span></h2>			
-			<div id="custom-border-1" data-aos = "fade-in">
-				<div id="cutom-border-2" data-aos = "fade-in"></div>
+			<div id="custom-border-1">
+				<div id="cutom-border-2"></div>
 			</div>
 			<div class="row">
-				<div class="col-md-6" data-aos ="fade-out">
+				<div class="col-md-6">
 					<a href="https://khantphone.github.io/AdminDashboard/">
 						<img src="images/admindashboard.png" alt="AdminDashboard" class="img-fluid">
 					</a>											 
@@ -264,7 +267,7 @@
 							</a>				
 						 </div>
 				</div>			
-				<div class="col-md-6" data-aos ="fade-in">
+				<div class="col-md-6">
 					 <a href="https://khantphone.github.io/SampleLandingPage/">
 					 	<img src="images/SampleLandingPage.png" alt="SampleLandingPage" class="img-fluid">
 					 </a>					 
@@ -279,7 +282,7 @@
 				</div>				
 			</div>
 			<div class="row">
-				<div class="col-md-6" data-aos ="fade-top">
+				<div class="col-md-6">
 					<a href="https://khantphone.github.io/Personal_Portfolio/">
 						<img src="images/Portfolio.png" alt="portofolio" class="img-fluid">
 					</a>					 
@@ -292,7 +295,7 @@
 							</a>					
 						 </div>
 				</div>
-				<div class="col-md-6" data-aos ="fade-out">
+				<div class="col-md-6">
 					<a href="https://khantphone.github.io/CheckOutForm/">
 						<img src="images/Bs-checkOut.png" alt="Bs-checkOut" class="img-fluid">
 					</a>					 
@@ -308,7 +311,7 @@
 				</div>							
 			</div>
 			<div class="row">
-				<div class="col-md-6 d-block mx-auto" data-aos ="fade-top">
+				<div class="col-md-6 d-block mx-auto">
 					 <a href="https://khantphone.github.io/Ecommerce/.">
 					 	<img src="images/Ecommerce.png" alt="AdminDashboard" class="img-fluid">
 					 </a>					 
@@ -321,7 +324,7 @@
 							</a>												
 						 </div>
 				</div>	
-				<div class="col-md-6 d-block mx-auto" data-aos ="fade-top">
+				<div class="col-md-6 d-block mx-auto">
 					 <a href="https://khantphone.github.io/shopping-site/">
 					 	<img src="images/sneaker-shopping-site.png" alt="AdminDashboard" class="img-fluid">
 					 </a>					 
@@ -336,6 +339,21 @@
 						 </div>
 				</div>	
 			</div>
+			<div class="row">
+				<div class="col-md-6 d-block mx-auto">
+					 <a href="https://khantphone.github.io/Santos_Travel/">
+					 	<img src="images/santos-travel.png" alt="AdminDashboard" class="img-fluid">
+					 </a>					 
+					 <h3 class="font-bar mt-4 font-weight-bold text-center font-18 font-bu">Santos-Travel
+					 </h3>				  
+						<div class="live-preview mt-4">
+							<a href="https://khantphone.github.io/Santos_Travel/">
+							 	<button class="btn d-block mx-auto px-4 py-2 text-white font-bu bg-fav"><i class="fas fa-eye mr-2"></i> Live Preview
+								</button>
+							</a>												
+						 </div>
+				</div>	
+			</div>
 			<!-- 
 			<p class="font-sar text-center mt-3 font-18 info-backend muted-text">
 				If u want to view more projects , <a href="backend.html"> Click Here !</a>
@@ -343,17 +361,18 @@
 		</div>
 	</section>
 	<!-- completedProject section end -->
+
 	<!-- myskills section start -->
 	<section id="myskills" class="py-4 px-4  bg-light">
 		<div class="container" >
-			<h2 class="font-sar text-center py-k mt-4" data-aos = "fade-out">My <span class="text-fav">
+			<h2 class="font-sar text-center py-k mt-4">My <span class="text-fav">
 				Skills
 			</span></h2>			
-			<div id="custom-border-1" data-aos = "fade-out">
-				<div id="cutom-border-2" data-aos = "fade-out"></div>
+			<div id="custom-border-1">
+				<div id="cutom-border-2"></div>
 			</div>
 			<div class="row py-5">
-				<div class="col-md-6 mt-2" data-aos ="fade-up">
+				<div class="col-md-6 mt-2">
 					<div class="d-flex mt-3">						
 						<p class="font-16 font-bu">HTML</p>						
 					</div>
@@ -379,7 +398,7 @@
 						<div class="progress-bar " style="width:50%; background: var(--custom-bg);"></div>
 					</div>
 				</div>
-				<div class="col-md-6 mt-4" data-aos = "fade-up">
+				<div class="col-md-6 mt-4">
 					<p class="font-18 font-bar mt-5">
 					One years experiences in Web Development ( HTML ,Css ,BootStrap , Js , PHP , MySql & GIT )  
 					 and want to learn new things .
@@ -392,17 +411,18 @@
 		</div>
 	</section>
 	<!-- myskills section end -->
+
 	<!-- services section start -->
 	<section id="services" class="py-4 px-4 mt-4">
 		<div class="container">
-			<h2 class="font-sar text-center py-2 text-dark" data-aos = "fade-in">My <span class="text-fav">
+			<h2 class="font-sar text-center py-2 text-dark">My <span class="text-fav">
 				Services
 			</span></h2>			
-			<div id="custom-border-1" data-aos = "fade-in">
-				<div id="cutom-border-2" data-aos = "fade-in"></div>
+			<div id="custom-border-1">
+				<div id="cutom-border-2"></div>
 			</div>
 			<div class="row py-2">
-				<div class="col-md-6 col-lg-4 mt-4" data-aos = "fade-up">
+				<div class="col-md-6 col-lg-4 mt-4">
 					<div class="card card-1 py-5 px-5 bg-card">
 						<img src="images/web.png" alt="" width="80" class="img-fluid d-block mx-auto">
 						<div class="card-body ">
@@ -412,7 +432,7 @@
 						</div>
 					</div>				
 				</div>					
-				<div class="col-md-6 col-lg-4 mt-4" data-aos = "fade-up">
+				<div class="col-md-6 col-lg-4 mt-4">
 					<div class="card py-5 px-5 card-2 bg-card">
 						<img src="images/user-interface.png" alt="" width="80" class="img-fluid d-block mx-auto">
 						<div class="card-body ">
@@ -422,7 +442,7 @@
 						</div>
 					</div>					
 				</div>
-				<div class="col-md-6 col-lg-4 mt-4" data-aos = "fade-up">
+				<div class="col-md-6 col-lg-4 mt-4">
 					<div class="card py-5 px-5 card-3 bg-card">
 						<img src="images/edit-video.png" alt="" width="80" class="img-fluid d-block mx-auto">
 						<div class="card-body ">
@@ -432,7 +452,7 @@
 						</div>
 					</div>					
 				</div>
-				<div class="col-md-6 col-lg-4 mt-4" data-aos = "fade-down">
+				<div class="col-md-6 col-lg-4 mt-4">
 					<div class="card py-5 px-5 card-4 bg-card">
 						<img src="images/conversation.png" alt="" width="80" class="img-fluid d-block mx-auto">
 						<div class="card-body">
@@ -443,7 +463,7 @@
 						</div>
 					</div>					
 				</div>
-				<div class="col-md-6 col-lg-4 mt-4" data-aos = "fade-down">
+				<div class="col-md-6 col-lg-4 mt-4">
 					<div class="card py-5 px-5 card-5 bg-card">
 						<img src="images/settings.png" alt="" width="80" class="img-fluid d-block mx-auto">
 						<div class="card-body ">
@@ -453,7 +473,7 @@
 						</div>
 					</div>					
 				</div>
-				<div class="col-md-6 col-lg-4 mt-4" data-aos = "fade-down">
+				<div class="col-md-6 col-lg-4 mt-4">
 					<div class="card py-5 px-5 card-6 bg-card">
 						<img src="images/bug.png" alt="" width="80" class="img-fluid d-block mx-auto">
 						<div class="card-body "> 
@@ -467,14 +487,15 @@
 		</div>
 	</section>
 	<!-- services section end -->
+
 	<!-- Swiper section start -->
 	<section id="swiper" class="py-4 px-4 mt-4 bg-light" >
 		<div class="container">
-			<h2 class="font-sar text-center py-2 " data-aos = "fade-out">Teachers <span class="text-fav">
+			<h2 class="font-sar text-center py-2 ">Teachers <span class="text-fav">
 				Reviews
 			</span></h2>			
-			<div id="custom-border-1" data-aos = "fade-out">
-				<div id="cutom-border-2" data-aos = "fade-out"></div>
+			<div id="custom-border-1">
+				<div id="cutom-border-2" ></div>
 			</div>
 			<div class="swiper-container" data-aos = "fade-up">
 			    <div class="swiper-wrapper">
@@ -573,12 +594,13 @@
 		</div>
 	</section>
 	<!-- Swiper section end --> 
+
 	<!-- customize section start -->
 	<section id="customize" class="py-3 px-4 bg-light">
 		<div class="container" >
-			<h2 class="font-sar text-center  py-2" data-aos = "fade-in">Customize<span class="text-fav">Your</span>Own!</h2>
-			<div id="custom-border-1" data-aos = "fade-in">
-				<div id="cutom-border-2" data-aos = "fade-in"></div>
+			<h2 class="font-sar text-center  py-2">Customize<span class="text-fav">Your</span>Own!</h2>
+			<div id="custom-border-1">
+				<div id="cutom-border-2"></div>
 			</div>
 			<div class="d-flex justify-content-center mt-3 ml-2">					
 				<button class="btn-2 mt-3" id="change-2" data-aos= "fade-up"></button>	
@@ -586,16 +608,17 @@
 				<button class="btn-4 mt-3" id="change-4" data-aos= "fade-up"></button>
 				<button class="btn-1 mt-3" id="change-1" data-aos= "fade-up"></button>	
 			</div>
-			<p class="font-bar font-16 text-center mt-4 pb-4" data-aos="fade-up">This will change the main colors of the website !</p>
+			<p class="font-bar font-16 text-center mt-4 pb-4" data-aos="fade-top">This will change the main colors of the website !</p>
 		</div>
 	</section>
 	<!-- customize section end --> 	
+
 	<!-- contanct section start -->
 	<section id="contact" class="py-4  px-4">
 		<div class="container" data-aos = "fade-out">
-			<h2 class="font-sar text-center py-2" data-aos = "fade-in">Get<span class="text-fav">In</span>Touch</h2>	
-			<div id="custom-border-1" data-aos = "fade-in">
-				<div id="cutom-border-2" data-aos = "fade-in"></div>
+			<h2 class="font-sar text-center py-2">Get<span class="text-fav">In</span>Touch</h2>	
+			<div id="custom-border-1">
+				<div id="cutom-border-2"></div>
 			</div>			
 				<input type="email" name="email" id="email" placeholder="Email" class="form-control font-bar font-18 border-bt">
 				<input type="text" name="subject" id="subject" placeholder="Subject" class="form-control font-bar font-18 border-bt">				
@@ -604,6 +627,7 @@
 		</div>
 	</section>
 	<!-- contanct section end -->
+
 	<!-- footer section start -->	
 	<section id="footer" class="py-2 pt-4 bg-light">
 		<p class="font-bar font-15 text-center ">		
