file directory fixings

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                          <!-- education 1 -->
                          <div class="education_data">
                              <div >
-                                 <h3 class="education_title font-24 font-sar" data-aos = "fade-top">Programming Basic</h3>
+                                 <h3 class="education_title font-sar" data-aos = "fade-top">Programming Basic</h3>
                                  <span class="education_subtitle text-muted font-bar font-16" data-aos = "fade-top">MCM myanmar</span>                                
                              </div>
                              <div>
@@ -615,7 +615,7 @@
 
 	<!-- contanct section start -->
 	<section id="contact" class="py-4  px-4">
-		<div class="container" data-aos = "fade-out">
+		<div class="container">
 			<h2 class="font-sar text-center py-2">Get<span class="text-fav">In</span>Touch</h2>	
 			<div id="custom-border-1">
 				<div id="cutom-border-2"></div>
