--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
 			<div id="custom-border-1">
 				<div id="cutom-border-2" ></div>
 			</div>
-			<div class="swiper-container" data-aos = "fade-up">
+			<div class="swiper-container">
 			    <div class="swiper-wrapper">
 				    <div class="swiper-slide">
 				      	<div class="row">
