--- a/index.html
+++ b/index.html
@@ -65,34 +65,33 @@
 	<!-- navigation end -->
 
 	<!-- indrouction section start -->
-	<section id="info" class="">
+	<section id="info">
 		<div class="container">
 			<div class="author-info">
-			<div class="row">				
-				<div class="col-md-6 author-info-text px-4">
-					<p class="font-sar font-30 font-weight-bold mt-4 mb-0 upper-text" style="letter-spacing: 2px;" >  Hi , I am 
-					</p>
-					<p class="font-sar font-30 font-weight-bold mb-0">	
-						<span class="typed1 text-fav font-40 lower-text" ></span>
-					</p>
-					<p class="font-bar font-24 mt-3 extra-text text-muted" >
-						A 19 years old freelance developer  who is  willing to learn new things and 
-						enjoyed about Coding .
-					</p>
-					<a href="#completed-prj">
-						<button class="btn px-4 py-2 font-bu text-white bg-fav mt-3 " data-aos="fade-up">View My Works
-						</button>
-					</a>					
-				</div>
-				<div class="col-md-6 mt-4 ">					
-					<img src="images/profile7.JPEG" alt="" class="img-fluid">					 
-				</div>
+				<div class="row">
+					<div class="col-md-6 author-info-text px-4">
+						<p class="font-sar font-30 font-weight-bold mt-4 mb-0 upper-text" style="letter-spacing: 2px;" >  Hi , I am 
+						</p>
+						<p class="font-sar font-30 font-weight-bold mb-0">	
+							<span class="typed1 text-fav font-40 lower-text" ></span>
+						</p>
+						<p class="font-bar font-24 mt-3 extra-text text-muted" >
+							A 19 years old freelance developer  who is  willing to learn new things and 
+							enjoyed about Coding .
+						</p>
+						<a href="#completed-prj">
+							<button class="btn px-4 py-2 font-bu text-white bg-fav mt-3 " data-aos="fade-up">View My Works
+							</button>
+						</a>					
+					</div>
+					<div class="col-md-6 mt-4 ">					
+						<img src="images/profile7.JPEG" alt="" class="img-fluid">					 
+					</div>
+				</div>			
 			</div>
-			
-		</div>
 		</div>				
 	</section>
-	<section id="intro" class="py-5 px-4  intro mt-4">
+	<section id="intro" class="py-5 px-4 intro mt-4">
 		<div class="container">
 			<h2 class="font-bar font-weight-bold text-uppercase text-center py-2 text-dark"
 			>Introduction</h2>	
@@ -188,7 +187,7 @@
 	<!-- educaton section end -->
 
 	<!-- counter section start -->
-	<section id="counter" class="py-5 px-4 bg- mt-4 bg-fav">
+	<section id="counter" class="py-5 px-4 mt-4 bg-fav">
 		<div class="container">
 			<div class="row ">				
 				<div class="col-md-6 col-lg-3 border-counter  d-flex justify-content-center counter-border-right">
@@ -522,10 +521,10 @@
 				    </div>
 				    <div class="swiper-slide">				      	
 				      	<div class="row">
-				      		<div class="col-md-12 col-lg-6" data-aos = "fade-up">
+				      		<div class="col-md-12 col-lg-6">
 				      			<img src="images/teacherReview2.jpeg" alt="" class="img-fluid d-block mx-auto ">
 				      		</div>
-				      		<div class="col-md-12 col-lg-6" data-aos = "fade-up">
+				      		<div class="col-md-12 col-lg-6">
 				      			<h2 class="font-sar font-18">
 				      				T.HlaingTinHtun ( IT )
 				      			</h2>
@@ -589,7 +588,7 @@
 				    </div>				   
    			 	</div>
 			    <!-- Add Pagination -->
-			     <div class="swiper-pagination"></div>
+			    
   			</div>
 		</div>
 	</section>
