swiper errors fix

--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
 			<div id="custom-border-1">
 				<div id="cutom-border-2" ></div>
 			</div>
-			<div class="swiper-container">
+			<div class="swiper">
 			    <div class="swiper-wrapper">
 				    <div class="swiper-slide">
 				      	<div class="row">
@@ -519,7 +519,7 @@
 				      		</div>
 				      	</div>				      		
 				    </div>
-				    <div class="swiper-slide">				      	
+				    <div class="swiper-slide">
 				      	<div class="row">
 				      		<div class="col-md-12 col-lg-6">
 				      			<img src="images/teacherReview2.jpeg" alt="" class="img-fluid d-block mx-auto ">
@@ -587,8 +587,8 @@
 				      	</div>				      		
 				    </div>				   
    			 	</div>
-			    <!-- Add Pagination -->
-			    
+			    <!-- Add Pagination -->	
+			   	<div class="swiper-pagination"></div>	   
   			</div>
 		</div>
 	</section>
@@ -641,12 +641,12 @@
 	<!-- bootstrap js  -->	
 	<script src="library/bootstrap/jquery-3.4.1.slim.min.js"></script>
 	<script src="library/bootstrap/popper.min.js"></script>
-	<script src="library/bootstrap/bootstrap.min.js"></script>
-	<!-- swiper js cdn -->
-	<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+	<script src="library/bootstrap/bootstrap.min.js"></script>	
 	<!-- jquery cdn -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<!-- typedJs cdn -->
+	<!-- swiper js cdn -->
+	<script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+	<!-- typedJs -->
 	<script src="library/typed-js/typed.min.js"></script>
 	<!-- sweetalert js cdn -->
 	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
