--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300&display=swap" rel="stylesheet">
 	<!-- AOS cdn -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">    
-	<link rel="shortcut icon" href="images/profile2.jpeg">
+	<link rel="shortcut icon" href="images/profile2.jpg">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -85,7 +85,7 @@
 						</a>					
 					</div>
 					<div class="col-md-6 mt-4 ">					
-						<img src="images/profile7.JPEG" alt="" class="img-fluid">					 
+						<img src="images/profile7.jpg" alt="" class="img-fluid">					 
 					</div>
 				</div>			
 			</div>
@@ -100,7 +100,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-6 mt-5">
-					<img src="images/profile2.jpeg" alt="My Profile" class="img-fluid">
+					<img src="images/profile2.jpg" alt="My Profile" class="img-fluid">
 				</div>
 				<div class="col-md-6 d-flex">
 					<div class="about-me">
@@ -255,7 +255,7 @@
 			<div class="row">
 				<div class="col-md-6">
 					<a href="https://khantphone.github.io/AdminDashboard/">
-						<img src="images/admindashboard.png" alt="AdminDashboard" class="img-fluid">
+						<img src="images/admindashboard.jpg" alt="AdminDashboard" class="img-fluid">
 					</a>											 
 					 <h3 class="font-bar mt-4 font-weight-bold text-center font-18 text-dark">AdminDashboard 
 					 </h3>				  
@@ -268,7 +268,7 @@
 				</div>			
 				<div class="col-md-6">
 					 <a href="https://khantphone.github.io/SampleLandingPage/">
-					 	<img src="images/SampleLandingPage.png" alt="SampleLandingPage" class="img-fluid">
+					 	<img src="images/SampleLandingPage.jpg" alt="SampleLandingPage" class="img-fluid">
 					 </a>					 
 					 <h3 class="font-bar mt-4 font-weight-bold text-center font-18">SampleLandingPage 
 					  </h3>				  
@@ -283,7 +283,7 @@
 			<div class="row">
 				<div class="col-md-6">
 					<a href="https://khantphone.github.io/Personal_Portfolio/">
-						<img src="images/Portfolio.png" alt="portofolio" class="img-fluid">
+						<img src="images/Portfolio.jpg" alt="portofolio" class="img-fluid">
 					</a>					 
 					 <h3 class="font-bar mt-4 font-weight-bold text-center font-18">PersonalPortofolio 
 					 </h3>					  
@@ -296,7 +296,7 @@
 				</div>
 				<div class="col-md-6">
 					<a href="https://khantphone.github.io/CheckOutForm/">
-						<img src="images/Bs-checkOut.png" alt="Bs-checkOut" class="img-fluid">
+						<img src="images/Bs-checkOut.jpg" alt="Bs-checkOut" class="img-fluid">
 					</a>					 
 					 <h3 class="font-bar mt-4 font-weight-bold text-center font-18">
 					 	CheckOutForm 
@@ -312,7 +312,7 @@
 			<div class="row">
 				<div class="col-md-6 d-block mx-auto">
 					 <a href="https://khantphone.github.io/Ecommerce/.">
-					 	<img src="images/Ecommerce.png" alt="AdminDashboard" class="img-fluid">
+					 	<img src="images/Ecommerce.jpg" alt="AdminDashboard" class="img-fluid">
 					 </a>					 
 					 <h3 class="font-bar mt-4 font-weight-bold text-center font-18 font-bu">Ecommerce
 					 </h3>				  
@@ -325,7 +325,7 @@
 				</div>	
 				<div class="col-md-6 d-block mx-auto">
 					 <a href="https://khantphone.github.io/shopping-site/">
-					 	<img src="images/sneaker-shopping-site.png" alt="AdminDashboard" class="img-fluid">
+					 	<img src="images/sneaker-shopping-site.jpg" alt="AdminDashboard" class="img-fluid">
 					 </a>					 
 					 <h3 class="font-bar mt-4 font-weight-bold text-center font-18 font-bu">
 					 	Sneaker-ShoppingSite
@@ -341,7 +341,7 @@
 			<div class="row">
 				<div class="col-md-6 d-block mx-auto">
 					 <a href="https://khantphone.github.io/Santos_Travel/">
-					 	<img src="images/santos-travel.png" alt="AdminDashboard" class="img-fluid">
+					 	<img src="images/santos-travel.jpg" alt="AdminDashboard" class="img-fluid">
 					 </a>					 
 					 <h3 class="font-bar mt-4 font-weight-bold text-center font-18 font-bu">Santos-Travel
 					 </h3>				  
@@ -501,7 +501,7 @@
 				    <div class="swiper-slide">
 				      	<div class="row">
 				      		<div class="col-md-12 col-lg-6">
-				      			<img src="images/teacherReview1.jpeg" alt="" class="img-fluid d-block mx-auto" >
+				      			<img src="images/teacherReview1.jpg" alt="" class="img-fluid d-block mx-auto" >
 				      		</div>
 				      		<div class="col-md-12 col-lg-6 ">
 				      			<h2 class="font-sar font-18 ">
@@ -522,7 +522,7 @@
 				    <div class="swiper-slide">
 				      	<div class="row">
 				      		<div class="col-md-12 col-lg-6">
-				      			<img src="images/teacherReview2.jpeg" alt="" class="img-fluid d-block mx-auto ">
+				      			<img src="images/teacherReview2.jpg" alt="" class="img-fluid d-block mx-auto ">
 				      		</div>
 				      		<div class="col-md-12 col-lg-6">
 				      			<h2 class="font-sar font-18">
@@ -544,7 +544,7 @@
 				    <div class="swiper-slide">
 				      	<div class="row">
 				      		<div class="col-md-12 col-lg-6">
-				      			<img src="images/teacherReview3.jpeg" alt="" class="img-fluid d-block mx-auto">
+				      			<img src="images/teacherReview3.jpg" alt="" class="img-fluid d-block mx-auto">
 				      		</div>
 				      		<div class="col-md-12 col-lg-6 ">
 				      			<h2 class="font-sar font-18  ">
@@ -568,7 +568,7 @@
 				    <div class="swiper-slide">
 				      	<div class="row">
 				      		<div class="col-md-12 col-lg-6 ">
-				      			<img src="images/teacherReview4.jpeg" alt="" class="img-fluid d-block mx-auto">
+				      			<img src="images/teacherReview4.jpg" alt="" class="img-fluid d-block mx-auto">
 				      		</div>
 				      		<div class="col-md-12 col-lg-6 ">
 				      			<h2 class="font-sar font-18  ">
