--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 	<link href="https://fonts.googleapis.com/css2?family=Baumans&family=Big+Shoulders+Stencil+Text&family=Faster+One&family=Saira+Condensed&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300&display=swap" rel="stylesheet">
 	<!-- AOS cdn -->
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">    
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
+    <!-- animate css cdn -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">    
 	<link rel="shortcut icon" href="images/profile2.jpg">
 	<link rel="stylesheet" href="css/style.css">
 </head>
@@ -91,7 +93,7 @@
 								enjoyed about Coding .
 							</p>
 							<a href="#completed-prj">
-								<button class="btn px-4 py-2 font-bu text-white bg-fav mt-3 " data-aos="fade-up">View My Works
+								<button class="animate__animated wow animate__fadeInUp btn px-4 py-2 font-bu text-white bg-fav mt-3 " >View My Works
 								</button>
 							</a>					
 						</div>
@@ -123,7 +125,7 @@
 							<p class="font-bar font-18 mt-3">Completed courses from <a href="https://aprogrammer.blog/">AProgrammer.blog  . </a></p>
 							<div class="reach-to-me mt-5">
 								<a href="https://www.facebook.com/khant.phonekh">
-									<button class="btn px-5 py-2 font-bu text-white bg-fav"  data-aos = "fade-up">Reach Me</button>
+									<button class="animate__animated wow animate__fadeInUp btn px-5 py-2 font-bu text-white bg-fav">Reach Me</button>
 								</a>
 							</div>
 						</div>
@@ -147,8 +149,8 @@
 	                         <!-- education 1 -->
 	                         <div class="education_data">
 	                             <div >
-	                                 <h3 class="education_title font-sar" data-aos = "fade-top">Programming Basic</h3>
-	                                 <span class="education_subtitle text-muted font-bar font-16" data-aos = "fade-top">MCM myanmar</span>                                
+	                                 <h3 class="animate__animated wow  animate__fadeIn education_title font-sar" >Programming Basic</h3>
+	                                 <span class="animate__animated wow  animate__fadeIn education_subtitle text-muted font-bar font-16" >MCM myanmar</span>                                
 	                             </div>
 	                             <div>
 	                                 <span class="education_rounder"></span>
@@ -163,16 +165,16 @@
 	                                 <span class="education_line"></span>
 	                             </div>
 	                             <div>
-	                                 <h3 class="education_title font-sar" data-aos = "fade-in">Computer Programming</h3>    
-	                                 <span class="education_subtitle text-muted font-bar font-16" data-aos = "fade-in">Metro IT & Japanese Language Center
+	                                 <h3 class="animate__animated wow  animate__fadeIn education_title font-sar">Computer Programming</h3>    
+	                                 <span class="animate__animated wow  animate__fadeIn education_subtitle text-muted font-bar font-16">Metro IT & Japanese Language Center
 	                                 </span>              
 	                            </div>                             
 	                         </div>
 	                         <!-- education 3 -->
 	                         <div class="education_data">
 	                             <div>
-	                                 <h3 class="education_title font-sar" data-aos = "fade-in">Web Development</h3>
-	                                 <span class="education_subtitle text-muted font-bar font-16" data-aos = "fade-in">Metro IT & Japanese Language Center</span>
+	                                 <h3 class="animate__animated wow  animate__fadeIn education_title font-sar">Web Development</h3>
+	                                 <span class="animate__animated wow  animate__fadeIn education_subtitle text-muted font-bar font-16">Metro IT & Japanese Language Center</span>
 	                                 
 	                             </div>
 	                             <div>
@@ -187,8 +189,8 @@
 	                                 <span class="education_rounder"></span>                            
 	                             </div>
 	                             <div >
-	                                 <h3 class="education_title font-sar " data-aos = "fade-in">Java & Database Structures</h3>
-	                                 <span class="education_subtitle text-muted font-bar font-16" data-aos = "fade-in">Metro IT & Japanese Language Center</span>                               
+	                                 <h3 class="animate__animated wow  animate__fadeIn education_title font-sar ">Java & Database Structures</h3>
+	                                 <span class="animate__animated wow  animate__fadeIn education_subtitle text-muted font-bar font-16">Metro IT & Japanese Language Center</span>                               
 	                             </div>                             
 	                         </div>
 	                    </div>
@@ -613,12 +615,12 @@
 					<div id="cutom-border-2"></div>
 				</div>
 				<div class="d-flex justify-content-center mt-3 ml-2">					
-					<button class="btn-2 mt-3" id="change-2" data-aos= "fade-up"></button>	
-					<button class="btn-3 mt-3" id="change-3" data-aos= "fade-up"></button>			
-					<button class="btn-4 mt-3" id="change-4" data-aos= "fade-up"></button>
-					<button class="btn-1 mt-3" id="change-1" data-aos= "fade-up"></button>	
+					<button class="animate__animated wow animate__fadeInUp btn-2 mt-3 " id="change-2"></button>	
+					<button class="animate__animated wow animate__fadeInUp btn-3 mt-3" id="change-3"></button>			
+					<button class="animate__animated wow animate__fadeInUp btn-4 mt-3" id="change-4"></button>
+					<button class="animate__animated wow animate__fadeInUp btn-1 mt-3" id="change-1"></button>	
 				</div>
-				<p class="font-bar font-16 text-center mt-4 pb-4" data-aos="fade-top">This will change the main colors of the website !</p>
+				<p class="font-bar font-16 text-center mt-4 pb-4 animate__animated wow  animate__fadeIn">This will change the main colors of the website !</p>
 			</div>
 		</section>
 		<!-- customize section end --> 	
@@ -633,7 +635,7 @@
 					<input type="email" name="email" id="email" placeholder="Email" class="form-control font-bar font-18 border-bt">
 					<input type="text" name="subject" id="subject" placeholder="Subject" class="form-control font-bar font-18 border-bt">				
 					<button  value="send" id = "submit" name ="submit" type = "submit" 
-					 class="btn btn-outline-dark px-5 py-2 font-bu text-white mt-5 d-block mx-auto bg-fav" data-aos ="fade-up">Send</button>
+					 class="animate__animated wow animate__fadeInUp btn btn-outline-dark px-5 py-2 font-bu text-white mt-5 d-block mx-auto bg-fav">Send</button>
 			</div>
 		</section>
 		<!-- contanct section end -->
@@ -666,6 +668,8 @@
 	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 	<!-- AOS js cdn -->
 	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+	<!-- wow js cdn -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
 	<script src="js/script.js"></script>	
 	
 	</body>
